--- a/libwds/rtsp/tests/README
+++ b/libwds/rtsp/tests/README
@@ -12,12 +12,11 @@ How to fuzz WDS parser
 3) Run run_afl_fuzzer.sh script which is located under libwds/rtsp/tests folder
    ./libwds/rtsp/tests/run_afl_fuzzer.sh PATH_TO_AFL_FUZZ TEST_RESULT_PATH
    e.g. ./libwds/rtsp/tests/run_afl_fuzzer.sh afl-fuzz test_results
-   Four fuzzer jobs will be started (header, payload_request, payload_response
-   and payload_response_error)
+   Four fuzzer jobs will be started (header, payload_request, payload_reply
+   and payload_error), each testing independent lexing / parsing code paths.
 
-4) Observe progress in separate xterm terminal or use afl-whatsup to get overall
-   status of fuzzing jobs with afl-whatsup.
-   afl-whatsup test_results or afl-whatsup -s test_results
+4) Observe progress in separate xterm terminal or use afl-whatsup to get status
+   of fuzzing job with afl-whatsup.
 
 5) For more information check http://lcamtuf.coredump.cx/afl/README.txt or docs
    folder under afl-fuzz source tree.
